change styles in modal & subHeader

--- a/src/components/Content/SubHeader/SubHeader.module.scss
+++ b/src/components/Content/SubHeader/SubHeader.module.scss
@@ -50,6 +50,8 @@
 
 @media (max-width: 767px) {
 	.subHeader {
+		position: static;
+
 		.subHeaderLeft {
 			width: 100%;
 			justify-content: space-between;
