--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -24,15 +24,8 @@
 			justify-content: space-between;
 			align-items: center;
 			padding: 16px;
-			position: sticky;
-			top: 0;
-			z-index: 1000;
+			position: static;
 			background-color: $white;
-			transition: box-shadow 0.3s ease-in-out;
-
-			&.scrolled {
-				box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.04);
-			}
 
 			.closeButton {
 				@include button;
