--- a/src/components/Content/SubHeader/SubHeader.module.scss
+++ b/src/components/Content/SubHeader/SubHeader.module.scss
@@ -1,6 +1,10 @@
 @use '../../../global.scss' as *;
 @use '../../../variables.scss' as *;
 
+.stopScroll {
+	overflow: hidden;
+}
+
 .subHeader {
 	display: flex;
 	justify-content: space-between;
